--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ HARVESTER_MAX_ATTEMPTS=3
 
 GITHUB_TOKEN=personal_access_token
 REPO_URL=https://github.com/username/repository
+GITHUB_USERNAME=username
+GITHUB_REPOSITORY=repository
 
 GIT_COMMITTER_NAME=name
 GIT_COMMITTER_EMAIL=email
