--- a/harvest.service
+++ b/harvest.service
@@ -4,11 +4,11 @@ After=network.target
 
 [Service]
 Restart=unless-stopped
-ExecStart=/usr/bin/docker run --rm --name harvester \
+ExecStart=/usr/bin/docker run --name harvest \
   --restart unless-stopped \
   --env-file /path/to/.env \
-  harvester_image:latest
-ExecStop=/usr/bin/docker stop harvester
+  harvest_image:latest
+ExecStop=/usr/bin/docker stop harvest
 
 [Install]
 WantedBy=multi-user.target
